--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ urls[3] = "https://forms.gle/9Qh22NVPyXDJWNf37";
 urls[4] = "https://forms.gle/buLVJAhTSJTNxmZ78";
 urls[5] = "https://forms.gle/spK9u8uj6VLckSyd6";
 urls[6] = "https://forms.gle/Xiov1dMdC1qs35vv9";
-urls[7] = "https://forms.gle/U12xUahaGawGFVfL7";
+urls[7] = "https://forms.gle/WWVksyE5JE1qU4388";
 var random = Math.floor(Math.random()*urls.length);
 window.location = urls[random];
 </script>
